// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdPreview should render MdPreview with content 1`] = `
<div>
  <div
    class="css-pl5zoc"
    data-color-mode="dark"
  >
    <markdown-preview
      source="test"
    />
  </div>
</div>
`;

exports[`MdPreview should render MdPreview with empty string 1`] = `
<div>
  <div
    class="css-pl5zoc"
    data-color-mode="dark"
  >
    <markdown-preview
      source=""
    />
  </div>
</div>
`;
